# hx-mazerunner

./: .gitignore  README.md  pyproject.toml  requirements.txt
hx_mazerunner/: components.py  main.py  maze.py
hx_mazerunner/static/js/: app.js
